Mon Aug  8 19:07:36 UTC 2011  Dean Wette  <wette_d@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/model/GeneratorXMI.xsd:
        * tools/modeling/plugins/org.opendds.modeling.validation/build.properties:
        * tools/modeling/plugins/org.opendds.modeling.validation/build.xml:
        * tools/modeling/plugins/org.opendds.modeling.validation/src/java/com/ociweb/xml/util/XMLUtil.java:
        * tools/modeling/plugins/org.opendds.modeling.validation/src/java/org/opendds/modeling/validation/OpenDDSModelValidator.java:
        * tools/modeling/plugins/org.opendds.modeling.validation/test/src/com/ociweb/xml/util/OpenDDSValidationUtilTest.java:

          Added test support for .codegen files to XML Validation tool. Also fixed some outstanding bugs
          and improved the build for the external validation tool.

Mon Aug  8 17:40:48 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/Service_Participant.cpp:
        * dds/DCPS/transport/framework/TransportClient.h:
        * dds/DCPS/transport/framework/TransportClient.cpp:
        * dds/DCPS/transport/framework/TransportDefs.h:
        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/framework/TransportRegistry.cpp:
        * dds/DCPS/transport/multicast/MulticastInst.cpp:
        * dds/DCPS/transport/tcp/TcpSendStrategy.cpp:
        * dds/DCPS/transport/tcp/TcpTransport.cpp:
        * dds/DCPS/transport/udp/UdpInst.cpp:
        * java/jms/src/org/opendds/jms/transport/TransportFactory.java:
        * performance-tests/Bench/src/Publication.cpp:
        * performance-tests/Bench/src/Subscription.cpp:
        * tests/DCPS/ConfigTransports/common.cpp:
        * tests/DCPS/ConfigTransports/run_test.pl:
        * tests/DCPS/FooTest3_0/SubDriver.h:
        * tests/DCPS/FooTest3_1/SubDriver.h:
        * tests/DCPS/FooTest3_2/SubDriver.h:
        * tests/transport/simple/PubDriver.cpp: